<resources>
    <string name="app_name">MONEE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="carloan_cal">Car Loan Calculator</string>
    <string name="daily_report">Daily Report</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="points">Points</string>
    <string name="transactions">Transactions</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="signup_msg">Don\'t have an account? Sign up</string>
    <string name="login_msg">Have an account? Log in</string>
    <string name="bankCarLoanRate">Bank Car Loan Interest Rates (updated on Oct,2022)</string>
    <string name="RHB">RHB Bank Auto Financing</string>
    <string name="RHB_rate">3.18% p.a.</string>
    <string name="PB">Public Bank Vehicle Financing</string>
    <string name="PB_rate">3.31% p.a.</string>
    <string name="MB">Maybank Car Loan</string>
    <string name="MB_rate">3.40% p.a.</string>
    <string name="HLB">Hong Leong Bank Car Financing</string>
    <string name="HLB_rate">3.24% p.a.</string>
    <string name="CIMB">CIMB Bank Hire Purchase</string>
    <string name="CIMB_rate">2.85% p.a.</string>
    <string name="resource_bankCarLoanRate">Resources from iMoney</string>
    <string name="monthlyRepayment">Monthly Repayment</string>
    <string name="monthlyRepayment_price">RM 0.00</string>
    <string name="summaryReport">Summary Report</string>
    <string name="id">ID</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string-array name="spinnerType">
        <item>Income</item>
        <item>Outcome</item>
    </string-array>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="date">Date</string>
    <string name="goals">Goals</string>
    <string name="tnc">Terms and Conditions</string>
</resources>