<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/summaryReport"
        android:icon="@drawable/ic_baseline_table_rows_24"
        android:title="@string/summaryReport" />
    <item
        android:id="@+id/dailyReport"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/daily_report" />
    <item
        android:id="@+id/carloanCal"
        android:icon="@drawable/ic_baseline_directions_car_24"
        android:title="@string/carloan_cal" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/profile" />
</menu>